--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\Script\Target.cs" />
     <Compile Include="Assets\Script\Accuracy.cs" />
     <Compile Include="Assets\Script\MovePlayer.cs" />
+    <Compile Include="Assets\Script\LeaderboardGame.cs" />
     <Compile Include="Assets\Script\Restart.cs" />
     <Compile Include="Assets\ScriptMenu\SensibilityMouse.cs" />
     <Compile Include="Assets\ScriptMenu\MainMenu.cs" />
